style.css
@font-face
{
    font-family: Monaco;
    src: url(Monaco.tff);
}

a:link 
{
    text-decoration: none;
    color:#5577ff;
}
a:hover.recent
{
    text-decoration: none;
}
a:hover
{
    text-decoration: underline;
}
a:visited
{
    color:#4488ee;
    text-decoration:none;
}
a:active
{
    text-decoration: none;
    color:#ff6677;
}
blockquote
{
    display: block;
    background:
        url('.\\images\\quotes.png') left top no-repeat;
    border-left: 3px solid #ccc;
    padding:10px;
    text-indent: 23px;
    white-space: pre;
    
    background-repeat: no-repeat;
    font-family: 'Mono';
    font-size: 20px;
}
blockquote.code
{
    
    background:
        url('.\\images\\brackets.png') left top no-repeat ,
        url('.\\images\\stekcarb.png') right bottom no-repeat;
    font-family: Monaco;
    font-size: 18px;
}
form
{
    margin: 0;
    padding: 0;
    display:inline;
}
fieldset
{
    border:0px;
    background: #ffeecc;
}
fieldset legend
{
    float:left;
    size: 50px;
    padding: 5px;
}

body
{
    background: url('images/background.png') repeat;
    background-attachment: fixed;
    font-family:Monaco;
    font-size:25px;
}
h1,h2,h3,h4,h5,h6
{
    font-family: Arial;
}
.navHR
{
    width: 50%;
    border: 2px;
    margin-left: 0%;
    border-style:dashed;
}
#sidebar-posts
{
    font-size:20px;
}
#item
{
    margin-left:15%;
    width:15%;
    position:fixed;
    top:2%;
    padding: 25px;
    font-size:25px;
    margin-bottom: 25px;
    font-family:Monaco, Helvetica;
    background:#72CCD4;

    box-shadow: 3px 3px 1px #888888;
    -moz-border-radius: 50px;
    border-radius: 50px;
}
#title,#author
{
    display:inline;
}
#navigation
{
    position:fixed;
    width:10%;
    letter-spacing:0px;
    top:2%;
    font-family: Arial;
    font-size:16px;
}
#entry,.project
{
    margin-left:10%;
    width:85%;
    top:2%;
    padding:5px;
    font-size:25px;
    margin-bottom: 25px;
    font-family:Arial, Helvetica;
    background:#ededed;

    box-shadow: 3px 3px 1px #888888;
    -moz-border-radius: 5px;
    border-radius: 5px;
}
.project
{
    background:#EED770;
}
#admin_area
{
    position:fixed;
    left:25%;
    right:25%;
}
.recent
{
    font-weight: bolder;
    font-family: Helvetica;
    color:#110011;
    height: 32px;
}
.recentTitles
{
    font-family: Arial;
    font-size: 15px;
}
#auth
{
    position:absolute;
    top:50%;
    left:50%;
    margin: -50px;
    text-align:center;
    padding-top:50px;
}

#title a
{
    text-transform:uppercase;
    text-decoration:none;
    font-family: Arial;
    font-weight:bold;
    font-size:20px;
    margin-left: 20px;
}
#para
{
    margin-left: 20px;
    margin-right: 20px;
    margin-bottom:0px;
    margin-top:0px;
    font-size:15px;

}
#author
{
    font-size:20px;
    color:#25964F;
}
#comments
{
    display:inline;
    float:right;
    font-size:20px;
}
#date
{
    display:inline;
    margin-left: 20px;
    text-transform:uppercase;
    font-size: 20px;
    font-family: Helvetica;
    color:#BF4930;
    font-weight:bold;
}
.tags
{
    display:inline;
    font-size: 15px;
    margin-left: 25%;
    margin-right:25%;
    font-family: Verdana;
}
.tag
{
    background-color: #A7B4D2;
    display:inline;
    font-size: 15px;
    padding:5px;
    margin-left: 10px;
    font-family: Verdana;
    
    -moz-border-radius: 20px;
    border-radius: 20px;
}
#prev
{
    margin-left:15%;
    padding-right: 50%;
}
#next
{
    /*float:left;*/
}
#deletePost
{
    width:25%;
    display:inline;
}
#del
{
    width:25%;
    display:inline;
}
#delConf
{
background:#dd0011; 
margin-left:25%;
}
#footer
{
    -webkit-border-top-left-radius: 50px;
    -webkit-border-top-right-radius: 50px;
    -moz-border-radius-topleft: 50px;
    -moz-border-radius-topright: 50px;
    border-top-left-radius: 50px;
    border-top-right-radius: 50px;

    position:fixed;
    width: 10%;
    left:0;
    bottom:0;
    height:25px;
    background:#FF9680;
    text-align:center;
    font-size:10px;
}
#banner
{
    color:white;
    padding: 20px;
    position:fixed;
    width: 21%;
    height:70px;
    right:0;
    top:0;
    background:#FF9640;
    text-align:center;
    font-size:15px;

    -webkit-border-bottom-left-radius: 50px;
    -webkit-border-bottom-right-radius: 50px;
    -moz-border-radius-bottomleft: 50px;
    -moz-border-radius-bottomright: 50px;
    border-bottom-left-radius: 50px;
    border-bottom-right-radius: 50px;
}
#commentError
{
     width: 35%;
     font-size:15px;
     background: #ff4444;
}
.comments
{
    margin-left:15%;
}
.loadComments
{
    font-family: Verdana;
    font-size:medium
}
.commenterName
{

    font-family: Verdana;
    font-weight: bold;
}
.userComment
{
    font-family: Verdana;
}
.commentDate
{
    font-family: Verdana;
    font-size: small;
}

